<resources>
    <string name="app_name">Resistance Helper</string>
    <string name="action_settings">Settings</string>
    <string name="string_exit_title">Exit the Game</string>
    <string name="string_exit_message">Do you want to exit the game now?\nAll the progress would be lost if you exit now</string>
    <string name="string_exit_positive">Exit</string>
    <string name="string_exit_negative">Back</string>
    <string name="role_resistant">Resistance</string>
    <string name="role_spy">Spy</string>
    <string name="string_readytoplay_quickstart">Start</string>
    <string name="string_rules_welcome">Rules</string>
    <string name="string_setting_welcome">Settings</string>
    <string name="string_contact_welcome">Contact the Arthur</string>
    <string name="title_quick_game">Quick Game</string>
    <string name="title_rules">Rules</string>
    <string name="button_quickstartfragment_setting">Setting</string>
    <string name="listitem_win1">Win:</string>
    <string name="listitem_total">Total:</string>
    <string name="string_addstranger_customgame">Add\nStranger</string>
    <string name="string_addfriend_customgame">Add\nFriend</string>
    <string name="string_clear_customgame">Clear\nList</string>
    <string name="string_startgame_customgame">Start\nGame</string>
    <string name="string_newplayer_customgame">New Player</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="enjoy_game">Enjoy Game!</string>
    <string name="string_player_main">player</string>
    <string name="show_role_game_prepare_activity">Your Identity:%1$s</string>
    <string name="confirmation">Got it.</string>
    <string name="input_name_title">Hello, can I have your name?</string>
    <string name="string_toast2_main">All cards are out</string>
    <string name="string_toast1_main">The app will store your name if you provided one.</string>
    <string name="string_button1_main">Show your idetity</string>
    <string name="string_button2_main">Let\'s start!</string>
    <string name="role_resistant_short_desc">Basic Character.Can not fail mission. Succeed 3 missions to win the game.</string>
    <string name="role_spy_short_desc">Basic Character. May fail mission. Fail 3 missions to win the game.</string>
    <string name="transit_message">Please pass the device to the next player</string>
    <string name="last_transit_message">Please pass the device to the leader</string>
    <string name="string_main_sound_title">Finally..</string>
    <string name="string_main_sound_positive">All Ready!</string>
    <string name="string_main_sound_neutral">Play Sound</string>
    <string name="string_main_sound_message">Do spies know each other?\n\nIf not, click the "Play Sound" button.\nOr someone may narrate the following scripts.\n </string>
    <string name="party_members">Resistance:%1$d Spy:%2$d</string>
    <string name="party_members_avalon">Loyalists:%1$d Minions:%2$d</string>
    <string name="string_caption_bottom1_game">Vote</string>
    <string name="string_caption_bottom2_game">Player</string>
    <string name="string_caption_bottom3_game">Mission</string>
    <string name="string_builder_vote_message_before_Game">Leader:\n\nLet everybody knows your selection\n\nand start DISCUSSION</string>
    <string name="button_main">Start Game!</string>
    <string name="string_vote_nay">Reject</string>
    <string name="string_vote_aye">Pass</string>
    <string name="string_item_game">Player</string>
    <string name="string_button_propose_game">Propose Members</string>
    <string name="string_button_start_game">Mission Result</string>
    <string name="string_topstatus0_game">Selection</string>
    <string name="string_topstatus1_game">Discussion</string>
    <string name="string_topstatus2_game">Action</string>
    <string name="string_topstatus3_game">One more!</string>
    <string name="mission_win_title">Success!</string>
    <string name="string_toast_lastpropose_game">The 5th team propose must pass</string>
    <string name="mission_win_message">Mission succeeded! Thanks for the effort from everyone</string>
    <string name="mission_lose_title">Fail!</string>
    <string name="mission_lose_message">Mission fails!</string>
    <string name="string_message_failvotes_game">%1$d Players failed the mission</string>
    <string name="string_message_failvote_game">1 Player failed the mission</string>
    <string name="replay">One More!</string>
    <string name="rate">Rate me!</string>
    <string name="string_game_button_wechat">Share on WeChat</string>
    <string name="string_gplus">Share Game</string>
    <string name="string_toast2_game">The application is not installed on your phone</string>
    <string name="string_toast1_game">No extra space for a team member</string>
    <string name="string_builder_message_team_propose_game">Leader:\n\nPlease CONFIRM your selection.</string>
    <string name="string_builder_positive_game">OK</string>
    <string name="string_builder_negative_game">Back</string>
    <string name="string_button_timer">Stop Discussion</string>
    <string name="string_title_veto_game">Rejected</string>
    <string name="string_message_veto_game">Your proposal did not pass.\n \nPlease pass the device to the next leader</string>
    <string name="string_leader">Leader</string>
    <string name="string_hint_excution">Press fingerprint</string>
    <string name="string_rule0">1.Summary:\nThis mobile application is a helper for the party game <i>The Resistance</i>. It allows 5 to 10 persons to play together.\n</string>
    <string name="string_rule1">2.Background:\nThe Resistance is a party game of social deduction. It is designed for five to ten players, lasts about 30 minutes, and has no player elimination. The Resistance is inspired by Mafia/Werewolf, yet it is unique in its core mechanics, which increase the resources for informed decisions, intensify player interaction, and eliminate player elimination.\n\nPlayers are either Resistance Operatives or Imperial Spies. For three to five rounds, they must depend on each other to carry out missions against the Empire. At the same time, they must try to deduce the other players’ identities and gain their trust.</string>
    <string name="string_rules4">If found any bug, or any idea about the game. Please contact me by sending email from this page.</string>
    <string name="string_rules3">4.Tips:\nDo not let the team proposal pass so easy! Take some time to watch the votes of other persons.\n</string>
    <string name="string_rule2">3.Rules:\nApproximately one third of the players are randomly chosen as spies,the rest are members of the Resistance.\n\nThe spies know who the other spies are, but Resistance members do not.\n
    Each mission has a leader. The leader proposes a mission team of a certain size, which the group approves by public vote.\n\n
    If the group does not approve the mission by a simple majority, leadership passes to the next player.\n\nIf the group cannot approve a mission team after five attempts, the spies win.\n\nOnce a mission team is chosen, it votes by secret ballot whether the mission succeeds or fails.\n\nResistance members will always vote for success, but spies have the option of voting for success or failure.\n\n
    It usually only takes one spy on the mission team to sabotage a mission, but sometimes the fourth mission requires two.\n\nIf three missions succeed, the Resistance wins. If three fail, the spies win. \n\nAnd finally, the last, but most important rule of all:\n\n
        You are allowed to say anything, to any one, at any time,as long as it is said publicly. </string>
    <string name="sabotage">Fail </string>
    <string name="execute">Execute </string>
    <string name="string_message_timer">VOTE!</string>
    <string name="playsound">Play sound</string>
    <string name="string_playsound_toast">Volume too low, please adjust the volume</string>
    <string name="send_email">Send</string>
    <string name="string_gametitle">Board Game Helper</string>
    <string name="resistance">Resistance</string>
    <string name="avalon">Avalon</string>
    <string name="string_gameversion">version 1.00</string>
    <string name="if_have_cards">Do you have cards and tokens?</string>
    <string name="have_cards">Yes I do</string>
    <string name="have_no_cards">No. I do not</string>
    <string name="button_manu_mangement">Help:</string>
    <string name="toast_customgame">Sorry we need at least 5 players</string>
    <string name="string_manu">Add Stranger:Use this button if you don\'n t know some player\'s name。\n\n Add:Use this for friends and acquitances.\n\nClick someone\'s name to remove</string>
    <string name="game_setup_button_total">Total Players: %1$d</string>
    <string name="game_setup_button_total_spy">Spies: %1$d</string>
    <string name="game_setup_button_total_spy_avalon">Minions: %1$d</string>
    <string name="string_thievies_win">Resistance Operatives Win!</string>
    <string name="string_thievies_win_avalon">Arthur\'s Loyalists Win!</string>
    <string name="string_spies_win">Spies Win!</string>
    <string name="string_spies_win_avalon">Modred\'s Minions Win!</string>
    <string name="string_share_title">Feel Good?</string>
    <string name="string_share_content">We played the board game Resistance by this app. It is quite funny experience!</string>
    <string name="script_close_eyes">Everyone close your eyes.</string>
    <string name="script_spies_find_each_other">Spies open your eyes. Look around, and make sure that you know all the other Spies.</string>
    <string name="script_spies_close_eyes">Spies close your eyes.</string>
    <string name="script_open_eyes">Everyone open your eyes.</string>
    <string name="script_extend_fists">Put your fist in your front.</string>
    <string name="script_evil_find_each_other">Minions of Mordred, open your eyes, look around to find your companions.</string>
    <string name="script_evil_find_each_other_except_oberon">Minions of Mordred (except Oberon), open your eyes, look around to find your companions.</string>
    <string name="script_evil_close_eyes">Minions of Mordred, close your eyes.</string>
    <string name="script_evil_be_known">Minions of Mordred, thumb up.</string>
    <string name="script_evil_be_known_except_mordred">Minions of Mordred (except Mordred himself), thumb up.</string>
    <string name="script_merlin_know_evil">Merlin, open your eyes and identify minions of Mordred.</string>
    <string name="script_evil_hide">Minions of Mordred, thumbs down.</string>
    <string name="script_merlin_close_eyes">Merlin, close your eyes.</string>
    <string name="script_merlin_be_known">Merlin, thumb up.</string>
    <string name="script_merlin_morgana_be_known">Merlin and Morgana, thumb up.</string>
    <string name="script_percival_know_merlin">Percival, open your eyes to find Merlin.</string>
    <string name="script_percival_know_merlin_morgana">Percival, open your eyes to find Merlin and Morgana.</string>
    <string name="script_merlin_hide">Merlin, thumb down.</string>
    <string name="script_merlin_morgana_hide">Merlin and Morgana, thumb down.</string>
    <string name="script_percival_close_eyes">Percival, close your eyes.</string>
    <string name="script_lancelot_know_each_other">Lancelot, open your eyes, find your counterpart.</string>
    <string name="script_lancelot_close_eyes">Lancelot, close your eyes.</string>
    <string name="option_merlin">Merlin</string>
    <string name="option_merlin_short_desc">Knows minions except Mordred, must remain hidden</string>
    <string name="option_assassin">Assassin</string>
    <string name="option_assassin_short_desc">If loyalist win 3 missions, Assassin has one change to kill Merlin to win the Game</string>
    <string name="option_percival">Percival</string>
</resources>