<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="vertical" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:textAlignment="textEnd" >

	  <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rule0"
		      android:textSize="20sp" />
	    <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rule1"
		      android:textSize="20sp" />
	  

	  <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:padding="5dp"
	      android:text="@string/string_rule2"
	      android:textSize="20sp" />

		

		  <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rules3"
		      android:textSize="20sp" />

		  
		 		 <TextView
		 		     android:layout_width="wrap_content"
		 		     android:layout_height="wrap_content"
		 		     android:layout_gravity="center_horizontal"
		 		     android:padding="5dp"
		 		     android:text="@string/string_rules4"
		 		     android:textSize="20sp" />



    </LinearLayout>

   
    </ScrollView>

	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_weight="0"
	     android:orientation="horizontal" >

     <EditText
	     android:id="@+id/editText_contact"
	     android:layout_width="0dp"
	     android:layout_height="wrap_content"
	     android:layout_weight="1"
	     >

	  
	 </EditText>
	 	 <Button
	     android:id="@+id/button_contact"
	     style="?android:attr/buttonStyleSmall"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="0"
	     android:text="@string/send_email" />
    "
    </LinearLayout>

	


    
</LinearLayout>