<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="vertical" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity = "end"
       android:textAlignment="textEnd" >

	  <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rule0"
		      android:textSize="20sp" />
	    <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rule1"
		      android:textSize="20sp" />
	  

	  <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:padding="5dp"
	      android:text="@string/string_rule2"
	      android:textSize="20sp" />

		

		  <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center_horizontal"
		      android:padding="5dp"
		      android:text="@string/string_rules3"
		      android:textSize="20sp" />

		  
		 		 <TextView
		 		     android:layout_width="wrap_content"
		 		     android:layout_height="wrap_content"
		 		     android:layout_gravity="center_horizontal"
		 		     android:padding="5dp"
		 		     android:text="@string/string_rules4"
		 		     android:textSize="20sp" />



    </LinearLayout>

  
    </ScrollView>
 <Button
       android:id="@+id/button_dialog_rules"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="" />
   
</LinearLayout>
