<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_excution"
    android:gravity="center"
    style="@style/TransitionDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        android:text="@string/if_have_cards"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/quickstart_transition_dialog_positive_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        android:padding="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/have_cards" />

    <Button
        android:id="@+id/quickstart_transition_dialog_negative_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:padding="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/have_no_cards" />

</LinearLayout>