<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spinner_quickstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/quickstart"
        android:layout_width="@dimen/button_width_quickstart"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_quickstart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_gap"
        android:alpha="0.9"
        android:background="@drawable/mybutton"
        android:text="@string/string_readytoplay_quickstart"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/resume_quickstart"
        android:layout_width="@dimen/button_width_quickstart"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickstart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_gap"
        android:alpha="0.9"
        android:background="@drawable/mybutton"
        android:text="@string/resume_game"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/setting_quickstart"
        android:layout_width="@dimen/button_width_quickstart"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resume_quickstart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_gap"
        android:alpha="0.9"
        android:background="@drawable/mybutton"
        android:text="@string/button_quickstartfragment_setting"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView_gametitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_top_margin"
        android:gravity="center_horizontal"
        android:text="@string/string_gametitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView_gamesubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_gametitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/resistance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/string_gameversion" />

</RelativeLayout>