<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
                 <ImageView
                 android:id="@+id/imageView_game"
                 android:layout_width="24dp"
                 android:layout_height="24dp"            
                 android:scaleType="centerCrop"
                 android:src="@drawable/help" />
    

        <GridView
            android:id="@+id/grid_management"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnWidth="@dimen/itemSize"
            android:gravity="center"
            android:horizontalSpacing="6dp"
            android:numColumns="auto_fit"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:stretchMode="columnWidth"
            android:verticalSpacing="6dp" >
        </GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<!-- 
        <Button
            android:id="@+id/button_manule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:text="@string/button_manu_mangement" />
            -->

        <Button
            android:id="@+id/button_management1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="@drawable/mybutton"
            android:layout_margin="6dp"
            android:text="@string/string_addstranger_customgame" />

        <Button
            android:id="@+id/button_management2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
             android:background="@drawable/mybutton"
             android:layout_margin="6dp"
            android:text="@string/string_addfriend_customgame" />

        <Button
            android:id="@+id/button_clear_management"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
             android:background="@drawable/mybutton"
             android:layout_margin="6dp"
            android:text="@string/string_clear_customgame" />

         <Button
             android:id="@+id/button_startgame_management2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:alpha="0.8"
              android:background="@drawable/mybutton"
              android:layout_margin="6dp"
             android:text="@string/string_startgame_customgame" />

    </LinearLayout>
<!--   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/spinner_management"
            android:text="@string/string_numofplayer_quickstart" />

        <Spinner
            android:id="@+id/spinner_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/textView1_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/spinner_management"
            android:text="player" />
    </RelativeLayout>
 -->
  
    <ListView
        android:id="@+id/list_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>
